--- a/rango/templates/rango/index.html
+++ b/rango/templates/rango/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 
-{% load staticfiles %} <!-- New line -->
-
 <html>
 
     <head>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <title>Rango</title>
     </head>
 
     <body>
-        <h1>Rango says...</h1>
-        hello world! <strong>{{ boldmessage }}</strong><br />
-        <a href="/rango/about/">About</a><br />
-        <img src="{% static "rango/images/photo.png" %}" alt="Picture of Rango" /> <!-- New line -->
-    </body>
+        <h1>Rango says...hello world!</h1>
+        {% if categories %}
+            <ul>
+                {% for category in categories %}
+                <li>{{ category.name }}</li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
 
+        <a href="/rango/about/">About</a><br />
+    </body>
 </html>
