--- a/rango/templates/rango/index.html
+++ b/rango/templates/rango/index.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
+{% extends "rango/base.html" %}
 
-<html>
-
-    <head>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        <title>Rango</title>
-    </head>
-
-    <body>
-        <h1>Rango says...hello world!</h1>
-        {% if categories %}
-            <ul>
-                {% for category in categories %}
-                <li>{{ category.name }}</li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <strong>There are no categories present.</strong>
-        {% endif %}
-
-        <a href="/rango/about/">About</a><br />
-    </body>
-</html>
+{% block content %}
+    <h1>Rango says.. hello world!</h1>
+    <h2>Top Categories</h2>
+    <ul>
+    {% for category in top_categories %}
+        <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
+    {% empty %}
+        <strong>There are no categories present.</strong>
+    {% endfor %}
+    </ul>
+    <h2>Top Pages</h2>
+    <ul>
+    {% for page in top_pages %}
+        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+    {% empty %}
+        <strong>보여줄 페이지가 없네요.</strong>
+    {% endfor %}
+    </ul>
+{% endblock content %}
