--- a/rango/templates/rango/index.html
+++ b/rango/templates/rango/index.html
@@ -19,4 +19,5 @@
         <strong>보여줄 페이지가 없네요.</strong>
     {% endfor %}
     </ul>
+    <a href="/rango/add_category/">Add a New Category</a><br />
 {% endblock content %}
