--- a/rango/static/rango/css/rango.css
+++ b/rango/static/rango/css/rango.css
@@ -1,3 +1,16 @@
 body {
     padding-left: 15px;
 }
+
+ul.errorlist {
+    margin: 0;
+    padding: 0;
+}
+.errorlist li {
+    background-color: red;
+    color: white;
+    display: block;
+    font-size: 10px;
+    margin: 0 0 3px;
+    padding: 4px 5px;
+}
