--- a/rango/templates/rango/add_category.html
+++ b/rango/templates/rango/add_category.html
@@ -4,7 +4,7 @@
 {% block content %}
     <h1>Add a category</h1>
 
-    <form id="category_form" method="POST" action="/rango/add_category/">
+    <form id="category_form" method="POST">
         {% csrf_token %}
         {% for hidden in form.hidden_fields %}
             {{ hidden }}
