--- a/rango/templates/rango/category.html
+++ b/rango/templates/rango/category.html
@@ -10,4 +10,5 @@
         <strong>No pages currently in category.</strong>
     {% endfor %}
     </ul>
+    <a href="/rango/category/{{ cat_slug }}/add_page/">Add a New Page</a>
 {% endblock content %}
