--- a/rango/templates/rango/add_category.html
+++ b/rango/templates/rango/add_category.html
@@ -6,16 +6,18 @@
 
     <form id="category_form" method="POST">
         {% csrf_token %}
-        {% for hidden in form.hidden_fields %}
-            {{ hidden }}
-        {% endfor %}
-
-        {% for field in form.visible_fields %}
-            {{ field.errors }}
-            {{ field.help_text }}
-            {{ field }}
-        {% endfor %}
-
-        <input type="submit" name="submit" value="Create Category" />
+        {{ form.as_p }}
+        <button type="submit" class="save btn btn-default">Add Category</button>
+{#        {% for hidden in form.hidden_fields %}#}
+{#            {{ hidden }}#}
+{#        {% endfor %}#}
+{##}
+{#        {% for field in form.visible_fields %}#}
+{#            {{ field.errors }}#}
+{#            {{ field.help_text }}#}
+{#            {{ field }}#}
+{#        {% endfor %}#}
+{##}
+{#        <input type="submit" name="submit" value="Create Category" />#}
     </form>
 {% endblock content %}
