--- a/rango/templates/rango/base.html
+++ b/rango/templates/rango/base.html
@@ -16,5 +16,7 @@
     <body>
         {% block content %}
         {% endblock content %} {# endblock의 경우 블럭네임(content)를 안써도 되지만 쓰는 것이 명료함 #}
+        <p><a href = "{% url 'index' %}">Index Page</a></p>
+        <p><a href ="{% url 'admin:index' %}">Admin Page</a></p>
     </body>
 </html>
