--- a/rango/templates/rango/category.html
+++ b/rango/templates/rango/category.html
@@ -5,10 +5,17 @@
     <h1>{{ category.name }}</h1>
     <ul>
     {% for page in category.pages.all %}
-        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+        <li><a href="{{ page.url }}">{{ page.title }}</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'edit_page' cat_slug page.pk %}">  edit</a>
+            {% endif %}
+        </li>
     {% empty %}
         <strong>No pages currently in category.</strong>
     {% endfor %}
     </ul>
-    <a href="{% url 'add_page' cat_slug %}">Add a New Page</a>
+    {% if user.is_authenticated %}
+        <a href="{% url 'edit_category' cat_slug %}">Edit this category</a><br />
+        <a href="{% url 'add_page' cat_slug %}">Add a New Page</a>
+    {% endif %}
 {% endblock content %}
