--- a/rango/templates/rango/index.html
+++ b/rango/templates/rango/index.html
@@ -19,5 +19,14 @@
         <strong>보여줄 페이지가 없네요.</strong>
     {% endfor %}
     </ul>
-    <a href="{% url 'add_category' %}">Add a New Category</a><br />
+
+    {% if user.is_authenticated %}
+        <a href="{% url 'add_category' %}">Add a New Category</a><br />
+        <a href="{% url 'restricted' %}">Restricted Page</a><br />
+        <a href="{% url 'logout' %}">Logout</a><br />
+    {% else %}
+        <a href="{% url 'register' %}">Register Here</a><br />
+        <a href="{% url 'login' %}">Login</a><br />
+    {% endif %}
+
 {% endblock content %}
