--- a/rango/templates/rango/about.html
+++ b/rango/templates/rango/about.html
@@ -11,7 +11,7 @@
     <body>
         <h1>Rango says...</h1>
         About<br />
-        <a href="/rango/">Home</a><br />
+        <a href="{% url 'index' %}">Home</a><br />
         <img src="{% static "rango/images/minions1.jpg" %}" alt="Picture of Minions" /> <!-- New line -->
     </body>
 
