--- a/rango/templates/rango/base.html
+++ b/rango/templates/rango/base.html
@@ -4,7 +4,7 @@
 
 <html>
     <head>
-        <title>Deu's Rango</title>
+        <title>Deu's Rango - {% block title %}How to Tango with Django{% endblock title %}</title>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <!-- Optional theme -->
@@ -17,9 +17,18 @@
         {% if user.is_authenticated %}
             <h1>Welcome {{ user.username }}</h1>
         {% endif %}
-        {% block content %}
-        {% endblock content %} {# endblock의 경우 블럭네임(content)를 안써도 되지만 쓰는 것이 명료함 #}
-        <p><a href = "{% url 'index' %}">Index Page</a></p>
-        <p><a href ="{% url 'admin:index' %}">Admin Page</a></p>
+        <div>
+            {% block content %}
+            {% endblock content %} {# endblock의 경우 블럭네임(content)를 안써도 되지만 쓰는 것이 명료함 #}
+        </div>
+
+        <hr />
+        <div>
+            <ul>
+                <li><a href = "{% url 'index' %}">Index Page</a></li>
+                <li><a href="{% url 'about' %}">About</a></li>
+                <li><a href ="{% url 'admin:index' %}">Admin Page</a></li>
+            </ul>
+        </div>
     </body>
 </html>
