--- a/rango/templates/rango/category.html
+++ b/rango/templates/rango/category.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
 {% extends "rango/base.html" %}
+
+{% block title %}{{ category.name }}{% endblock title %}
 
 {% block content %}
     <h1>{{ category.name }}</h1>
