Ch11. Session cookies  Applied.

--- a/rango/templates/rango/about.html
+++ b/rango/templates/rango/about.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+        <p>You have visited {{ visits }} times.</p>
         <h1>Rango says...</h1>
         About<br />
         <a href="{% url 'index' %}">Home</a><br />
