--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -22,10 +22,10 @@
     {% if user.is_authenticated %}
         <a href="{% url 'add_category' %}">Add a New Category</a><br />
         <a href="{% url 'restricted' %}">Restricted Page</a><br />
-        <a href="{% url 'logout' %}">Logout</a><br />
+        <a href="{% url 'auth_logout' %}?next={% url 'index' %}">Logout</a><br />
     {% else %}
-        <a href="{% url 'register' %}">Register Here</a><br />
-        <a href="{% url 'login' %}">Login</a><br />
+        <a href="{% url 'registration_register' %}">Register Here</a><br />
+        <a href="{% url 'auth_login' %}">Login</a><br />
     {% endif %}
 
     <p>visits: {{ visits }}</p>
