--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -22,6 +22,7 @@
     {% if user.is_authenticated %}
         <a href="{% url 'add_category' %}">Add a New Category</a><br />
         <a href="{% url 'restricted' %}">Restricted Page</a><br />
+        <a href="{% url 'auth_password_change' %}">암호 변경</a><br />
         <a href="{% url 'auth_logout' %}?next={% url 'index' %}">Logout</a><br />
     {% else %}
         <a href="{% url 'registration_register' %}">Register Here</a><br />
