--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,22 +1,19 @@
-{% extends "rango/base.html" %}
+{% extends "base.html" %}
 
-{% block content %}
-    <h1>Add a category</h1>
+{% block title %}Add Category{% endblock title %}
 
-    <form id="category_form" method="POST">
+{% block body_block %}
+    <form role="form" id="category_form" method="POST" action=".">
+        <h2 class="form-signin-heading">Add a category</h2>
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Add Category</button>
-{#        {% for hidden in form.hidden_fields %}#}
-{#            {{ hidden }}#}
-{#        {% endfor %}#}
-{##}
-{#        {% for field in form.visible_fields %}#}
-{#            {{ field.errors }}#}
-{#            {{ field.help_text }}#}
-{#            {{ field }}#}
-{#        {% endfor %}#}
-{##}
-{#        <input type="submit" name="submit" value="Create Category" />#}
+        <div class="form-group {%if form.name.errors %}has-error{% endif %}">
+            <label for="category_name">카테고리 이름:</label>
+            <input type="text" name="name" class="form-control" id="category_name" placeholder="{{ form.name.help_text }}">
+            {% for error in form.name.errors %}
+                <p class="help-block">{{ error }}</p>
+            {% empty %}
+            {% endfor %}
+        </div>
+        <button class="btn btn-primary" type="submit" name="submit"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Category</button>
     </form>
-{% endblock content %}
+{% endblock body_block %}
