--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,13 +1,28 @@
-{% extends "rango/base.html" %}
+{% extends "base.html" %}
 
-{% block content %}
-    <h1>Add a Page</h1>
+{% block title %}Add Page{% endblock title %}
 
-    <form id="page_form" method="POST">
+{% block body_block %}
+    <form role="form" id="page_form" method="POST" action=".">
+        <h2 class="form-signin-heading">Add a Page to {{ category.name }}</h2>
         {% csrf_token %}
-        {{ form.as_p }}
-{#        <input type="submit" name="submit" value="Create Page" />#}
-        <button type="submit" class="save btn btn-default">Add Page</button>
+        <div class="form-group {%if form.title.errors %}has-error{% endif %}">
+            <label for="page_title">페이지 이름:</label>
+            <input type="text" name="title" class="form-control" id="page_title" placeholder="{{ form.title.help_text }}">
+            {% for error in form.title.errors %}
+                <p class="help-block">{{ error }}</p>
+            {% empty %}
+            {% endfor %}
+        </div>
+        <div class="form-group {%if form.url.errors %}has-error{% endif %}">
+            <label for="page_url">페이지 주소:</label>
+            <input type="url" name="url" class="form-control" id="page_url" placeholder="{{ form.url.help_text }}">
+            {% for error in form.url.errors %}
+                <p class="help-block">{{ error }}</p>
+            {% empty %}
+            {% endfor %}
+        </div>
+        <button class="btn btn-primary" type="submit" name="submit"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Page</button>
     </form>
 
-{% endblock content %}
+{% endblock body_block %}
