--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,13 @@
-{% extends "rango/base.html" %}
+{% extends "base.html" %}
 
-{% block content %}
-    <h1>Login</h1>
-    <form method="post" action=".">
+{% block body_block %}
+    <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
+
+    <form class="form-signin" role="form" method="post" action=".">
         {% csrf_token %}
-        {{ form.as_p }}
-
-        <input type="submit" value="Log in" />
-        <input type="hidden" name="next" value="{{ next }}" />
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <input class="form-control" placeholder="Username" id="id_username" maxlength="254" name="username" type="text" required autofocus=""/>
+        <input type="password" class="form-control" placeholder="Password" id="id_password" name="password" type="password" required />
+        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" />Sign in</button>
     </form>
-    <p>회원이 아니신가요? <a href="{% url 'registration_register' %}">회원가입</a>!</p>
-{% endblock content %}
+{% endblock body_block %}
