--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -1,6 +1,6 @@
-{% extends "rango/base.html" %}
+{% extends "base.html" %}
 
-{% block content %}
+{% block body_block %}
     <h1>회원가입 완료</h1>
     <p>회원으로 가입되셨습니다.</p>
-{% endblock content %}
+{% endblock body_block %}
